--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,25 @@
 :root{
-    --primary-color: red;
+    --primary-background-color: #e5e5e5;
+    --primary-font-color: #303960;
+    --secondary-font-color: #f8b24f;
+
+    --primary-font-size: 20px;
+    --secondary-font-size: 16px;
+
+    --primary-button-color: #dddddd;
+    --secondary-button-color: #d54062;
+    --active-button-color: teal;
+}
+
+body{
+    padding: 20px 40px;
+    margin: 0px;
+    height: 100vh;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.app{
+    min-width: 100%;
+    /* box-sizing: border-box; */
 }
