--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -9,6 +9,9 @@
     --primary-button-color: #dddddd;
     --secondary-button-color: #d54062;
     --active-button-color: teal;
+
+    --primary-font:  'Lato', sans-serif;
+    --secondary-font: 'Lobster', cursive;
 }
 
 body{
@@ -17,7 +20,7 @@ body{
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
+    font-family: var(--primary-font)
 }
 
 .app{
