--- a/src/pages/AboutPage.module.css
+++ b/src/pages/AboutPage.module.css
@@ -2,7 +2,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Lobster', cursive;
+    font-family: var(--secondary-font)
 }
 
 .aboutus{
@@ -21,7 +21,7 @@
 
 .aboutus p{
     font-size:2em;
-    font-family: 'Lato', sans-serif;
+    font-family: var(--primary-font);
 }
 .ourteam{
     display:flex;
@@ -40,5 +40,5 @@
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
-    font-family: 'Lato', sans-serif;
+    font-family: var(--primary-font);
 }
